docs: swagger文件撰寫
